<resources>
    <string name="app_name">Shopping List Room</string>
    <string name="empty_shopping_list_description">Your list is empty\nClick the button below to add an item now</string>
    <string name="shopping_list">Shopping list</string>
    <string name="add_item">Add item</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_item_name">Add item name</string>
    <string name="name">Name</string>
</resources>