<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/counter_image_view"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_circle_bar" />

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0/0"
            android:textColor="#A0A0A0"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/counter_image_view"
            app:layout_constraintEnd_toEndOf="@+id/counter_image_view"
            app:layout_constraintStart_toStartOf="@+id/counter_image_view"
            app:layout_constraintTop_toTopOf="@+id/counter_image_view" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/shopping_list"
            android:textColor="#D2C2C2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/counter_image_view"
            app:layout_constraintEnd_toStartOf="@+id/counter_image_view"
            app:layout_constraintTop_toTopOf="@+id/counter_image_view" />

        <LinearLayout
            android:id="@+id/empty_shopping_list_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/counter_image_view">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:src="@drawable/ic_empty_shopping_list" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/empty_shopping_list_description"
                android:textColor="#777676"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/empty_shopping_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/add_item"
                app:backgroundTint="@color/button"
                app:icon="@drawable/ic_add_item" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/shopping_list_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/counter_image_view">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/shopping_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_shopping_item" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/shopping_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:text="@string/add_item"
                app:backgroundTint="@color/button"
                app:icon="@drawable/ic_add_item" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="#A0A0A0"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>